tests/NormalTests/paczka1/small_fuzzy/43771886.err
Error in line 3: 2Kjb85N83pe .829 83,5
Error in line 4: 5Pnld S192 65,7
Error in line 6: 2Kjb85N83pe S192 11,8
Error in line 1: qmpC9bAVqK S369 10,6
Error in line 9: 5Pnld S369 91,51
Error in line 7: 2Kjb85N83pe A346 97,8
